--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,8 @@ grid-template-areas:
 }
 
 .new-recipe {
-  width: 460px;
+  width: 50vw;
+  min-width: 460px;
   margin: 0 auto;
   margin-bottom: 30px;
   padding: 0 20px 30px 20px;
@@ -226,6 +227,12 @@ grid-template-areas:
   margin-left: 20px;
   font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 1.5em;
+}
+.show-buttons {
+  width: 100vw;
+  margin-left: -22.5vw;
+  margin-top: 10px;
+  display: inline-block;
 }
 
 .order-form {
