--- a/src/components/levi/Labels.css
+++ b/src/components/levi/Labels.css
@@ -105,8 +105,8 @@ position: relative
 
 .pick-labels {
     /* display: inline-block; */
-
-    max-height: 200px;
+    margin-bottom: -30px;
+    /* max-height: 200px; */
     /* overflow: hidden; */
 }
 
