add larger card to home

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -40,8 +40,8 @@
 
 .user-show-recipe {
     position: relative;
-    width: 30vw;
-    height: 6vw;
+    width: 60vw;
+    height: 150px;
     margin: 10px auto 0 auto;
 }
 
