label and card size set to scale

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -41,7 +41,7 @@
 .user-show-recipe {
     position: relative;
     width: 60vw;
-    height: 150px;
+    height: 16.5vw;
     margin: 10px auto 0 auto;
 }
 
