--- a/src/index.css
+++ b/src/index.css
@@ -358,3 +358,16 @@ grid-template-areas:
     width: 100vw;
   }
 }
+
+
+
+
+
+
+
+/* background-repeat: no-repeat;
+background-size: contain;
+position: relative;
+height: 15vw;
+width: 10vw;
+margin: 1.5vw; */
