--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -72,9 +72,40 @@
     position: relative;
     z-index: 2
 }
-.labels > div {
-position: relative
+
+.labelDiv{
+    float: left;
 }
+.labelDiv img {
+    width: 5vw;
+    height: 5vw!important;
+}
+.labelDiv > div {
+    display: inline-block;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    height: 12.5vw;
+    width: 10vw;
+    margin: 1.5vw;
+}
+.labelData {
+    display: inline-block;
+    float: right;
+}
+
+
+.home-label {
+    transform: scale(.7);
+    /* margin: -50%; */
+}
+
+
+
+.labels > div {
+    position: relative
+    }
 .labels h3 {
     font-size: 2.7vw;
     margin-top: 2.1vw;
