--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -39,19 +39,24 @@
 }
 
 /*********************************  FORM */
-.box1 .pick-label > div > div {
+.pick-label > div > div {
     min-height: 250px;
+    width: 200px;
+    margin: 0 auto 20px auto;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
-.box1 .pick-label h3 {
+.pick-label h3 {
     font-size: 34px;
     margin-top: 26px;
 }
-.box1 .pick-label h4 {
+.pick-label h4 {
     margin-top: 0px;
     padding: 5px 0 ;
     width: 100%;
 }
-.box1 .pick-label img {
+.pick-label img {
     display: block;
     height: 120px;
     margin: 10px auto 0 auto;
@@ -65,7 +70,6 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    /* position: absolute; */
 }
 
 .labels > div > div:hover {
@@ -73,7 +77,7 @@
     z-index: 2
 }
 
-.labelDiv{
+/* .labelDiv{
     float: left;
 }
 .labelDiv img {
@@ -89,7 +93,7 @@
     height: 12.5vw;
     width: 10vw;
     margin: 1.5vw;
-}
+} */
 .labelData {
     display: inline-block;
     float: right;
