--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -40,8 +40,8 @@
 
 .user-show-recipe {
     position: relative;
-    width: 60vw;
-    height: 16.5vw;
+    width: 500px;
+    height: 210px;
     margin: 10px auto 0 auto;
 }
 
