--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 /* font-family: 'Wellfleet', cursive; */
 /* font-family: 'Smokum', cursive; */
 /* font-family: 'Arbutus', cursive; */
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -64,16 +66,17 @@ a {
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
 .grid-container {
-  background-image: url('./img/wood-panel-vintage.png');
-  background-repeat: repeat-x;
+
   display: grid;
   width: 100vw;
+  /* max-width: 100vw; */
   height: 100vh;
   grid-template-rows: 150px 40px auto 60px;
   grid-template-columns: 100vw;
   background-color: white;
   grid-gap: 0;
-  padding: 0;
+  /* padding: 0; */
+  margin: 0;
 grid-template-areas:
   '  header '
   '  nav '
@@ -90,6 +93,10 @@ grid-template-areas:
 /*********************************************************************************************************/
 .grid-header {
   grid-area: header;
+  background-image: url('./img/wood-panel-vintage.png');
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-color: orangered;
   text-align: center;
 }
 
@@ -119,6 +126,11 @@ grid-template-areas:
   font-weight: 700;
 }
 
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           MODAL           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 .modal {
   position: fixed;
   z-index: 100;
