--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Arbutus|Holtwood+One+SC|Smokum|Wellfleet&display=swap');
-/* font-family: 'Holtwood One SC', serif; */
-/* font-family: 'Wellfleet', cursive; */
-/* font-family: 'Smokum', cursive; */
-/* font-family: 'Arbutus', cursive; */
 
+*:focus {
+  outline: 0;
+}
 
 body {
   margin: 0;
@@ -14,12 +13,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-*:focus {
-  outline: 0;
+h1, h2, h3 {
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
 }
 
 h1 {
-  font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 4em;
   margin-block-start: 10px;
   margin-block-end: 0em;
@@ -29,14 +27,12 @@ h1 {
 
 h2 {
   display: block;
-  font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 3em;
   margin-block-start: 0em;
   margin-block-end: 0em;
 }
 h3 {
   display: inline-block;
-  font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 2em;
   margin-block-start: 0em;
   margin-block-end: 0em;
