add single toggle to menu with dashON and dash-on

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,9 @@ a {
 .activeNav {
   text-decoration: underline;
 }
+.dash-on {
+  background-color: orangered;
+}
 
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
