stayl info, add bullets, clean up content

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,11 @@ a {
 .dash-on {
   background-color: orangered;
 }
-
+.info-container li {
+  text-align: right;
+  margin: 0 16vw;
+  padding-right: 24px;
+}
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           GRID            ***************************************/
