--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,16 +1,12 @@
 .form {
     background-color: white;
   }
-.container {
-    /* width: calc(100vw - 80px); */
-    /* padding: 0 20px; */
-}
   
 .box1 {
     float: left;
-    width: 270px;
+    width: calc(26vw - 0px);
     display: inline-block;
-    padding: 0 10px 0 40px;
+    padding: 0 1vw 0 5vw;
 }
 .box1 h2 {
     text-align: center;
@@ -21,7 +17,8 @@
 }
 
 .box2 {
-    width: calc(100vw - 350px);
+    width: calc(68vw - 0px);
+    max-width: calc(600px);
     display: inline-block;
 }
 
@@ -210,7 +207,7 @@ background-image:
 /***************************************         FRIENDLY          ***************************************/
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 767px) {
     .box1 {
         width: 80vw;
         display: block;
