--- a/src/index.css
+++ b/src/index.css
@@ -322,6 +322,9 @@ grid-template-areas:
   float: right;
   margin: 10px 20px 10px 0;
 }
+.show-recipe .chalk-line {
+  width: 300px;
+}
 .card-left {
   float: left;
 }
