--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,7 +1,9 @@
-.form {
-    background-color: white;
-  }
-  
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************         BOX1              ***************************************/
+/***************************************         BOX2              ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 .box1 {
     float: left;
     width: calc(26vw - 0px);
@@ -21,7 +23,26 @@
     max-width: calc(600px);
     display: inline-block;
 }
-
+@media screen and (max-width: 767px) {
+    .box1 {
+        width: 80vw;
+        display: block;
+        float: none;
+        margin: 0 10vw;
+        padding: 0;
+    }
+    .box2 {
+        width: 100vw;
+        display: block;
+        margin-bottom: auto;
+    }
+}
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************         ADD TO            ***************************************/
+/***************************************         RECIPE            ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 .add-chili {
     text-align: right;
 }
@@ -95,14 +116,8 @@ section > section {
     font-weight: 200;
 }
 
-.btn {
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    border-radius: 15px;
-    position: absolute;
-    border: none;
-}
+
+
 .selectBtn {
     margin-left: 0px;
     padding: 0;
@@ -124,39 +139,6 @@ section > section {
     background-color: transparent;
     font-weight: 600;
 }
-/*********************************************************************************************************/
-/***************************************                           ***************************************/
-/***************************************         PROGRESS          ***************************************/
-/***************************************              BAR          ***************************************/
-/***************************************                           ***************************************/
-/*********************************************************************************************************/
-progress {
-    -webkit-appearance: none;
-    appearance: none;
-}
-
-progress[value]::-webkit-progress-bar {
-    background-color: #eee;
-    border-radius: 2px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-}
-
-progress[value]::-webkit-progress-value {
-background-image:
-        -webkit-linear-gradient(top, 
-                                rgba(255, 255, 255, .25), 
-                                rgba(0, 0, 0, .25)),
-        -webkit-linear-gradient(left, rgb(255, 255, 0, 0), yellow, yellow, orange, #f44, red);
-
-    border-radius: 2px; 
-    background-size: 35px 20px, 100% 100%, 100% 100%;
-    transition: width .5s linear;
-}
-
-.bored-bar {
-    width: calc(100% - 50px);
-    margin: 0px;
-}
 
 
 /*********************************************************************************************************/
@@ -172,10 +154,6 @@ background-image:
     cursor: pointer;
     border: none;
 }
-.scroll-menu-arrow {
-    padding: 0px;
-    cursor: pointer;
-}
 .menu-wrapper {
     max-height: 80px;
 }
@@ -184,6 +162,10 @@ background-image:
     max-height: 80px;
 }
 
+.scroll-menu-arrow {
+    padding: 0px;
+    cursor: pointer;
+}
 .arrow-prev, .arrow-next {
     width: 0; 
     height: 0; 
@@ -200,40 +182,10 @@ background-image:
     border-top: 40px solid transparent;
     border-bottom: 40px solid transparent;
 }
-
-/*********************************************************************************************************/
-/***************************************                           ***************************************/
-/***************************************         MOBILE            ***************************************/
-/***************************************         FRIENDLY          ***************************************/
-/***************************************                           ***************************************/
-/*********************************************************************************************************/
 @media screen and (max-width: 767px) {
-    .box1 {
-        width: 80vw;
-        display: block;
-        float: none;
-        margin: 0 10vw;
-        padding: 0;
-        /* text-align: left; */
-    }
-      
-  .box2 {
-        width: 100vw;
-        display: block;
-        margin-bottom: auto;
-    }
     .bored-bar {
         width: calc(100vw - 40px);
         margin: 20px 0;
     }
 
 }
-
-
-
-
-
-
-
-
-
