move scrolls from edit and form to one component called Select

--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,10 @@
 
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
-/***************************************           EDIT            ***************************************/
+/***************************************           SELECT          ***************************************/
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
-.edit-btn {
+.select-btn {
   display: inline-block;
   position: relative;
   z-index: 1;
