ternary to input and button, show image

--- a/src/App.css
+++ b/src/App.css
@@ -157,3 +157,12 @@
     margin: 0 5vw;
   }
 }
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           UPLOADED IMAGE           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
+.uploaded-image {
+  height: 250px;
+  width: 200px;
+}
