switch to Redux

--- a/src/index.css
+++ b/src/index.css
@@ -43,10 +43,10 @@ button {
 a {
   text-decoration: none;
 }
-.x {
+.xClose {
   float: right;
   z-index: 1;
-  margin: -7vw;
+  /* margin: -7vw; */
 }
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
