--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,7 @@ grid-template-areas:
 /*********************************************************************************************************/
 .grid-nav {
   grid-area: nav;
+  /* background-color: rgb(203, 125, 58); */
   background-color: orangered;
   text-align: right;
 }
@@ -236,8 +237,12 @@ grid-template-areas:
 /*********************************************************************************************************/
 .grid-footer {
   grid-area: footer;
-  background-color: white;
-  padding: 0 0 0 0;
+  /* background-color: white; */
+  padding: 0;
+  background-image: url('./img/wood-panel-vintage.png');
+  background-color: orangered;
+  background-repeat: repeat-x;
+  /* background-size: contain; */
 }
 
 .grid-footer > section {
