--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -21,8 +21,11 @@
 .label2 > input::placeholder {
     color: #000;
 }
-.label3 > input::placeholder {
+.label3 .brand-header::placeholder {
     color: #fff;
+}
+.label3 .name-sauce::placeholder {
+    color: #000;
 }
 .label4 > input::placeholder {
     color: #000;
@@ -30,24 +33,30 @@
 .label5 > input::placeholder {
     color: rgb(123, 88, 65);
 }
-.label3 .brand-header, .label3 .name-sauce, .label5 .brand-header, .label5 .name-sauce {
+.label3 .brand-header, .label5 .brand-header, .label5 .name-sauce {
     color: #000;
     text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000;
 }
-.label3 h4, .label5 h4, .label3 h3, .label5 h3 {
+.label5 h4, .label3 h3, .label5 h3 {
     text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000;
     font-stretch: expanded;
 }
-.label4 small {
+.ounces {
+    font-size: 13px;
+}
+.label1 .ounces {
+color: rgb(123, 88, 65);
+}
+.label4 .ounces {
     color: #fff;
 }
-.label5 small {
+.label5 .ounces {
     color: #000;
 }
 
 /*********************************  FORM */
 .pick-label > div {
-    min-height: 195px;
+    height: 195px;
     width: 135px;
     margin: 20px auto 20px auto;
     background-position: center;
