--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,7 @@ background-image:
   /* max-width: 100vw; */
   height: 100vh;
   grid-template-rows: 114px 30px auto 60px;
+  /* grid-template-rows: 114px 30px calc(100vw - 204px) 60px; */
   grid-template-columns: 100vw;
   background-color: white;
   grid-gap: 0;
